# dupfinder

./: .gitignore  Cargo.toml  README.md  package.sh
package/: package-arch.sh  package-deb.sh  package-tarball.sh
src/: dupfinder.rs  main.rs
