[package]
name = "dupfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
sha2 = "^0.10"
generic-array = "^0.14"
hex-literal = '^0.4'
hex = '^0.4'
clap = { version = "^4", features = ["derive"] }

[profile.release]
opt-level = 3
# overflow-checks = false
strip = true
lto = true
codegen-units = 1
panic = "abort"